pluralsight-webinars/2021-10-introducing-istio/demo3/authz/allow/stock-allow-web.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: stock-allow-web
  namespace: widgetario
spec:
  selector:
    matchLabels:
      app: stock-api
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/widgetario/sa/widgetario-web"]
    to:
    - operation:
        methods: ["GET"]
