pluralsight-webinars/2021-10-introducing-istio/demo3/authz/allow/web-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: web-allow
  namespace: widgetario
spec:
  selector:
    matchLabels:
      app: web
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
